themes/Adwaita/gtk-3.0/gtk-widgets.css
* {
    engine: adwaita;
    padding: 1;

    /* Style properties */
    -GtkToolButton-icon-spacing: 4;

    -GtkTextView-error-underline-color: @error_color;

    -GtkPaned-handle-size: 5;

    -GtkCheckButton-indicator-size: 16;
    -GtkCheckMenuItem-indicator-size: 12;

    /* The size for scrollbars. The slider is 2px smaller, but we keep it
     * up so that the whole area is sensitive to button presses for the
     * slider. The stepper button is larger in both directions, the slider
     * only in the width
     */

    -GtkScrolledWindow-scrollbar-spacing: 0;
    -GtkScrolledWindow-scrollbars-within-bevel: 1;

    -GtkToolItemGroup-expander-size: 12;
    -GtkExpander-expander-size: 12;

    -GtkMenu-horizontal-padding: 0;
    -GtkMenu-vertical-padding: 0;

    -GtkWidget-link-color: @link_color;
    -GtkWidget-visited-link-color: @link_color;
    -GtkIMHtml-hyperlink-color: @link_color;
    -GtkHTML-link-color: @link_color;

    -GtkWidget-wide-separators: 1;

    -WnckTasklist-fade-overlay-rect: 0;

    -GtkWidget-focus-padding: 2;
    -GtkWidget-focus-line-width: 1;
    -adwaita-focus-border-color: alpha(@theme_text_color, 0.4);
    -adwaita-focus-border-radius: 2;
    -adwaita-focus-fill-color: alpha(@theme_base_color, 0.0);
    -adwaita-focus-border-gradient: none;
    -adwaita-focus-border-dashes: 1;
}

/***************
 * Base States *
 ***************/
GtkWindow {
    color: @theme_fg_color;
}

* {
    background-color: @theme_bg_color;
}

*:hover {
    background-color: shade (@theme_bg_color, 1.02);
    color: @theme_fg_color;
}

*:selected {
    background-color: @theme_selected_bg_color;
    color: @theme_selected_fg_color;
}

*:selected:focused {
    background-color: @theme_selected_bg_color;
    color: @theme_selected_fg_color;
}

*:insensitive {
    background-color: @insensitive_bg_color;
    color: @insensitive_fg_color;
    border-color: @insensitive_border_color;
}

*:active {
    background-color: shade (@theme_bg_color, 0.915);
}

.tooltip {
    padding: 4 4;
    border-style: none;
    background-color: @theme_tooltip_bg_color;
    color: @theme_tooltip_fg_color;
}

.grip {
    background-color: shade (@inactive_frame_color, 0.93);
}

.rubberband {
    background-color: alpha (@theme_selected_bg_color, 0.35);

    border-color: @theme_selected_bg_color;
    border-style: solid;
    border-width: 1;
    border-radius: 2;
}

.pane-separator {
    color: shade (@inactive_frame_color, 0.80);
}

.pane-separator:prelight,
.pane-separator:selected {
    color: @theme_text_color;
}

GtkStatusbar {
    padding: 5;
    color: @theme_fg_color;
    -GtkStatusbar-shadow-type: none;
}

/****************
 * Text Entries *
 ****************/
.entry {
    background-color: @theme_base_color;

    border-style: none;
    border-width: 1;
    border-radius: 2;

    /* we use inner-border instead of padding because padding
     * also applies to the progressbar.
     */
    padding: 0 2;
    -GtkEntry-inner-border: 5;
    -GtkEntry-progress-border: 0;

    /* border-image defined in the -assets variants */
}

.entry:insensitive {
    background-color: @insensitive_bg_color;

    border-image: none;
    border-style: solid;
}

.entry.progressbar {
    background-color: @theme_selected_bg_color;
    color: @theme_selected_fg_color;

    border-width: 1;
    border-radius: 2;
    /* border-image defined in -assets variant */

    -adwaita-progressbar-pattern: none;
}

/*****************
 * GtkSpinButton *
 *****************/
.spinbutton.button,
.spinbutton.button:prelight,
.spinbutton.button:active,
.spinbutton.button:focused,
.spinbutton.button:insensitive {
    color: @internal_element_color;

    background-image: none;
    background-color: alpha(@theme_base_color, 0.0);

    border-style: none;
    border-image: none;
}

.spinbutton.button:insensitive {
    color: @insensitive_border_color;
}

/****************
 * Progress bar *
 ****************/

/* progress component */
.progressbar,
.progressbar row,
.progressbar row:hover,
.progressbar row:selected,
.progressbar row:selected:focused {
    background-image: -gtk-gradient (linear,
                                     left top, left bottom,
                                     from (@progressbar_background_a),
                                     to (@progressbar_background_b));

    border-radius: 3;
    border-width: 1;
    border-style: none;
    /* border-image defined in the -assets variant */

    -adwaita-progressbar-pattern: -gtk-gradient (linear,
                                                 left top, right bottom,
                                                 from (alpha (@progressbar_pattern, 0.00)),
                                                 color-stop (0.49, alpha (@progressbar_pattern, 0.00)),
                                                 color-stop (0.50, alpha (@progressbar_pattern, 0.10)),
                                                 to (alpha (@progressbar_pattern, 0.10)));
}

/* through component */
GtkProgressBar,
.trough row {
    padding: 0;
}

GtkProgressBar.trough,
.trough row,
.trough row:hover {
    background-image: -gtk-gradient (linear,
                                     left top, left bottom,
                                     from (@trough_bg_color_a),
                                     to (@trough_bg_color_b));

    border-width: 1;
    border-style: solid;
    border-radius: 3;
    border-color: shade (@inactive_frame_color, 0.925);
}

.trough row:selected,
.trough row:selected:focused {
    background-image: -gtk-gradient (linear,
                                     left top, left bottom,
                                     from (mix (@trough_bg_color_a, @theme_selected_bg_color, 0.25)),
                                     to (mix (@trough_bg_color_b, @theme_selected_bg_color, 0.25)));
}

/************
 * GtkScale *
 ************/
GtkScale {
    -GtkScale-slider-length: 16;
    -GtkRange-slider-width: 20;
    -GtkRange-trough-border: 0;
}
/* ... */

